<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:orientation="vertical"
    >
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        >

        <ImageView
            android:id="@+id/imgheader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/header_pizza"
            android:contentDescription="@string/strbtninfo" />

    </LinearLayout> 
    
    <View
        android:id="@+id/fakeView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@+id/header"
        android:background="#AAAAAA" />
 
             
<!--     <LinearLayout -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:gravity="bottom" -->
        
<!--         > -->
<!--         <TableLayout -->
<!--             android:layout_width="fill_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:stretchColumns="0,1" -->
<!--             android:id="@+id/maintable"  -->
            
<!--             > -->
<!--         </TableLayout> -->
<!--         </LinearLayout> -->
 	<ListView android:layout_width="fill_parent"   
      android:layout_height="fill_parent"   
      android:id="@+id/mainListView"
      android:layout_below="@+id/fakeView"
      android:background="#00000000" 
	  android:cacheColorHint="#00000000"
      >  
    </ListView>  

       
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center|bottom"
        >

      <Button
            android:id="@+id/btnaddanother"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/straddother" />

        <Button
            android:id="@+id/btnreset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strreset" />

        <Button
            android:id="@+id/btnnext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strnext" />
    </LinearLayout> 
     
</RelativeLayout>